--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,5 +1,5 @@
 easy_admin:
-  site_name: 'CManager'
+  site_name: '<img src="/images/logo.png" width="35%">'
 
   user:
     name_property_path: 'email'
